# data-clients

./: .gitignore  README.md  pyproject.toml
src/data_clients/: __init__.py  exceptions.py
src/data_clients.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/data_clients/browser/: __init__.py  models.py  parser.py  reader.py
src/data_clients/calendar/: __init__.py  client.py
src/data_clients/contacts/: __init__.py  reader.py
src/data_clients/embeddings/: __init__.py  base.py  ollama.py  openai.py  voyage.py
src/data_clients/gmail/: __init__.py  attachment.py  auth.py  client.py  fetcher.py  label.py  message.py  models.py  parser.py  query.py
src/data_clients/imessage/: __init__.py  contacts.py  models.py  reader.py  sender.py
src/data_clients/llm/: __init__.py  client.py
src/data_clients/vectorstore/: __init__.py  base.py  chroma.py  qdrant.py
src/data_clients/web/: __init__.py  fetcher.py  search.py
src/data_clients/whatsapp/: __init__.py  models.py  reader.py  sender.py
tests/: conftest.py  test_exceptions.py
tests/test_browser/: test_parser.py  test_reader.py
tests/test_calendar/: test_client.py
tests/test_contacts/: test_reader.py
tests/test_embeddings/: test_base.py
tests/test_gmail/: test_label.py  test_parser.py  test_query.py
tests/test_imessage/: test_reader.py  test_sender.py
tests/test_llm/: test_client.py
tests/test_vectorstore/: test_base.py
tests/test_web/: test_fetcher.py  test_search.py
